--- a/src/pages/LoginPage/loginPage.css
+++ b/src/pages/LoginPage/loginPage.css
@@ -1,4 +1,5 @@
 section#login-page {
+    margin-top: 20px;
     width: 100%; height: 100%;
     background: url('./../../../public/xyz.jpg');
     background-size: cover;
