--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -57,7 +57,8 @@
   margin-bottom: 20px;
   margin-left: 25px;
   margin-right: 2px;
-  transition: transform 0.3s, box-shadow 0.3s;
+  transition: transform 0.3s,
+  box-shadow 0.3s;
 }
 
 .feature i {
